# final_project_nicolas_longuetmarx

./: CONTRIBUTING.rst  LICENSE  README.md  legis_easy_download_usage.ipynb  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: legis_easy_download.rst  modules.rst
legis_easy_download/: legis_easy_download.py
tests/: test_legis_easy_download.py
