[tool.poetry]
name = "legis_easy_download"
version = "0.1.0"
description = "Python packages that eases to use Legiscan API to download and classify legislation data"
authors = ["Nicolas Longuet Marx <nkd2120@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
